--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "circleci-demo"
 version = "0.1.0"
 description = "A simple Python project to demonstrate CircleCI workflows"
+requires-python = ">=3.8"
 authors = [
     { name = "Your Name", email = "your.email@example.com" }
 ]
